<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="privacy">Пользовательское соглашение</string>
    <string name="privacy_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_mail" translatable="false">morechiba@yandex.ru</string>
    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="no_found">Ничего не нашлось.</string>
    <string name="error_connection">Проблемы со связью.</string>
    <string name="error_connection_tip">Загрузка не удалась. Проверьте подключение к интернету.</string>
    <string name="button_update">Обновить</string>
    <string name="search_hint">Введите название для поиска.</string>
    <string name="search_history_title">Вы искали</string>
    <string name="button_search_clear">Очистить историю</string>
    <string name="current_position_start">00:00</string>
</resources>