<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="@dimen/padding_main"
        android:paddingVertical="12dp"
        android:text="@string/app_name"
        android:textColor="@color/app_name_color"
        android:textFontWeight="500"
        android:textSize="@dimen/text_big"
        android:fontFamily="@font/ys_display_medium"
        />

    <Button
        android:id="@+id/search"
        style="@style/ButtonMain"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/media"
        style="@style/ButtonMain"
        android:text="@string/media"
        app:icon="@drawable/media" />

    <Button
        android:id="@+id/setting"
        style="@style/ButtonMain"
        android:text="@string/setting"
        app:icon="@drawable/setting" />
</LinearLayout>